Fixed too brigth border in dark mode

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,12 +17,12 @@
 
 .dark-mode .card {
   background-color: $card-background-dark !important;
-  border: 1px $font-color-dark solid !important;
+  border: 1px $border-color-dark solid !important;
 }
 
 .dark-mode .workout-card {
   background-color: $card-background-dark !important;
-  border: 1px $font-color-dark solid !important;
+  border: 1px $border-color-dark solid !important;
 }
 
 .workout-card .workout-body {
@@ -31,7 +31,7 @@
 
 .dark-mode .workout-index-card {
   background-color: $card-background-dark !important;
-  border: 1px $font-color-dark solid !important;
+  border: 1px $border-color-dark solid !important;
 }
 
 .workout-index-card {
@@ -54,8 +54,6 @@
 
 .block-card {
   min-height: 120px;
-  // border: 1px grey dashed !important;
-  // padding-right: 40px !important;
   margin-bottom: 12px;
 }
 
@@ -70,8 +68,8 @@
 
 .dark-mode .block-card {
   background-color: $card-background-dark !important;
-  // border: 1px $font-color-dark dashed !important;
-  border: 1px $font-color-dark solid !important;
+  // border: 1px $border-color-dark dashed !important;
+  border: 1px $border-color-dark solid !important;
 }
 
 .card-header form {
@@ -79,7 +77,7 @@
 }
 
 .dark-mode .card-header {
-  border-bottom: 1px $font-color-dark solid !important;
+  border-bottom: 1px $border-color-dark solid !important;
 }
 
 /* RESPONSIVE */
