--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -13,9 +13,12 @@ $links-dark: #fefae0;
 
 // $card-background: #faedcd;
 $card-background-dark: #27323E;
+$border-color-dark: var(--bs-gray);
 
 $footer-background: #F4F4F4;
 $footer-background-dark: #001a2c;
+
+
 
 // Fonts
 // @import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap';
